--- a/scss/layout/layout.css
+++ b/scss/layout/layout.css
@@ -10,100 +10,36 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(rgb(37, 157, 255), rgb(48, 255, 48));
+  background: linear-gradient(#4087DD, #F6BA19);
   border-radius: 20px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(0, 114, 207);
+  background: linear-gradient(#0073ff, #ffbb00);
 }
 
 #main {
   overflow-x: hidden;
 }
 
-/*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
-html.has-scroll-smooth {
+html.lenis {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
   overflow: hidden;
 }
 
-html.has-scroll-dragging {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-
-.has-scroll-smooth body {
-  overflow: hidden;
-}
-
-.has-scroll-smooth [data-scroll-container] {
-  min-height: 100vh;
-}
-
-[data-scroll-direction=horizontal] [data-scroll-container] {
-  height: 100vh;
-  display: inline-block;
-  white-space: nowrap;
-}
-
-[data-scroll-direction=horizontal] [data-scroll-section] {
-  display: inline-block;
-  vertical-align: top;
-  white-space: nowrap;
-  height: 100%;
-}
-
-.c-scrollbar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 11px;
-  height: 100%;
-  transform-origin: center right;
-  transition: transform 0.3s, opacity 0.3s;
-  opacity: 0;
-}
-
-.c-scrollbar:hover {
-  transform: scaleX(1.45);
-}
-
-.c-scrollbar:hover, .has-scroll-scrolling .c-scrollbar, .has-scroll-dragging .c-scrollbar {
-  opacity: 1;
-}
-
-[data-scroll-direction=horizontal] .c-scrollbar {
-  width: 100%;
-  height: 10px;
-  top: auto;
-  bottom: 0;
-  transform: scaleY(1);
-}
-
-[data-scroll-direction=horizontal] .c-scrollbar:hover {
-  transform: scaleY(1.3);
-}
-
-.c-scrollbar_thumb {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: black;
-  opacity: 0.5;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
-  cursor: grab;
-}
-
-.has-scroll-dragging .c-scrollbar_thumb {
-  cursor: grabbing;
-}
-
-[data-scroll-direction=horizontal] .c-scrollbar_thumb {
-  right: auto;
-  bottom: 0;
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
 }
 
 .links ul {
@@ -143,6 +79,24 @@ html.has-scroll-dragging {
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.349);
 }
 
+.slidedown {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  color: #0F172A;
+  animation: slidedown 0.4s forwards;
+}
+
+@keyframes slidedown {
+  from {
+    top: -100%;
+  }
+  to {
+    top: 0;
+  }
+}
 .title {
   width: 60%;
   margin-top: 10rem;
@@ -209,11 +163,11 @@ html.has-scroll-dragging {
     outline: 10px solid rgba(0, 174, 237, 0.1764705882);
   }
 }
-.main-grid .grid-container {
+.grid-container .main-grid {
   background-color: rgba(255, 255, 255, 0.096);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
 }
-.main-grid .grid-container div {
+.grid-container .main-grid div {
   border-style: dashed;
 }/*# sourceMappingURL=layout.css.map */
