--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -23,4 +23,5 @@
 
 @import '../modules/scrollthumb';
 @import '../modules/nav';
-@import '../modules/herosection'
+@import '../modules/herosection';
+@import '../modules/numBanner'
