--- a/scss/layout/layout.css
+++ b/scss/layout/layout.css
@@ -15,7 +15,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(#0073ff, #ffbb00);
+  background: linear-gradient(#ff6a00, #ee0979);
 }
 
 #main {
@@ -200,4 +200,63 @@ html.lenis {
 }
 .banner-box:hover .numBanner-title {
   color: white;
+}
+
+.right-inner {
+  box-shadow: 5px 10px 30px rgba(10, 0, 48, 0.363);
+}
+
+.main-sidebar-container {
+  background-image: linear-gradient(43deg, rgba(65, 89, 208, 0.3098039216) 0%, rgba(255, 161, 249, 0.1098039216) 46%, rgba(255, 205, 112, 0.6784313725) 100%);
+}
+
+.sidebarbox {
+  box-shadow: 15px 10px 30px rgba(0, 0, 0, 0.329);
+  background-image: linear-gradient(to left, #EFEFEF, #D7DCDB);
+}
+
+.repeat-signal {
+  transition: all 300ms ease-in-out;
+  border: 2px solid #04141F;
+  animation-name: signal;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes signal {
+  0% {
+    outline: 0px solid #04141F;
+  }
+  100% {
+    outline: 20px solid rgba(4, 20, 31, 0);
+  }
+}
+@keyframes signalColor {
+  0% {
+    outline: 0px solid #ffffff;
+  }
+  100% {
+    outline: 20px solid rgba(255, 255, 255, 0);
+  }
+}
+.btn-content {
+  transition: all 300ms ease-in-out;
+}
+
+.common-btn-container {
+  transition: all 300ms ease-in-out;
+}
+.common-btn-container:hover {
+  background: #04141F;
+}
+.common-btn-container:hover .btn-content {
+  color: white;
+}
+.common-btn-container:hover .repeat-signal {
+  border-color: white;
+  animation-name: signalColor;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }/*# sourceMappingURL=layout.css.map */
