--- a/scss/layout/layout.css
+++ b/scss/layout/layout.css
@@ -18,8 +18,8 @@
   background: linear-gradient(#ff6a00, #ee0979);
 }
 
-#main {
-  overflow-x: hidden;
+body {
+  background: white;
 }
 
 html.lenis {
@@ -254,6 +254,86 @@ html.lenis {
   color: white;
 }
 .common-btn-container:hover .repeat-signal {
+  border-color: white;
+  animation-name: signalColor;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+.first-section-grid {
+  grid-template-rows: 58% 45%;
+}
+
+.first-section-box {
+  background: rgba(112, 128, 144, 0.185);
+  border-radius: 1.5rem;
+  scale: 1;
+  border: 1px solid rgb(180, 180, 180);
+}
+
+.related-services li {
+  display: flex;
+  gap: 5px;
+  font-size: 0.8rem;
+  color: #b0b8c7;
+  margin-block: 5px;
+  font-weight: bold;
+  transition: all 300ms ease-in-out;
+}
+.related-services li:hover {
+  transform: translateX(10%);
+  color: #9DE7EF;
+}
+
+.skills h1 {
+  background: linear-gradient(to right, #40B2DC, #A7D756);
+  color: transparent;
+  font-weight: bolder;
+  -webkit-background-clip: text;
+          background-clip: text;
+}
+
+.repeat-signal-1 {
+  transition: all 300ms ease-in-out;
+  border: 2px solid #04141F;
+  animation-name: signal;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes signal {
+  0% {
+    outline: 0px solid #04141F;
+  }
+  100% {
+    outline: 20px solid rgba(4, 20, 31, 0);
+  }
+}
+@keyframes signalColor {
+  0% {
+    outline: 0px solid #ffffff;
+  }
+  100% {
+    outline: 20px solid rgba(255, 255, 255, 0);
+  }
+}
+.btn-content-1 {
+  transition: all 300ms ease-in-out;
+}
+
+.common-btn-container-1 {
+  background: linear-gradient(to right, #40B2DC, #A7D756);
+  transition: all 300ms ease-in-out;
+}
+.common-btn-container-1:hover {
+  background: #000102;
+}
+.common-btn-container-1:hover .btn-content-1 {
+  color: white;
+}
+.common-btn-container-1:hover .repeat-signal-1 {
   border-color: white;
   animation-name: signalColor;
   animation-duration: 1.5s;
