--- a/scss/layout/layout.css
+++ b/scss/layout/layout.css
@@ -339,4 +339,8 @@ html.lenis {
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
+}
+
+.second-section {
+  scale: 1;
 }/*# sourceMappingURL=layout.css.map */
