--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -27,4 +27,5 @@ body{
 @import '../modules/fixedSidebar';
 @import '../modules/commonBtn';
 @import '../modules/firstSection';
-@import '../modules/commonbtn2'
+@import '../modules/commonbtn2';
+@import '../modules/secondsection';
