--- a/scss/modules/_secondsection.scss
+++ b/scss/modules/_secondsection.scss
@@ -2,8 +2,8 @@
   scale: 1;
 }
 
-.gradient-card{
+.gradient-card {
 
-  background: linear-gradient(to letf,black,indigo);
+  background: linear-gradient(to right,black,rgb(27, 0, 124));
   color: white;
 }
